--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,21 +1,25 @@
 <html>
-    <body>
-        <h1>
-            {% if name != None %}
-            Hello {{ name }}!
-            {% else %}
-            Hello World!
-            {% endif %}
-        </h1>
+    
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+        <link rel='stylesheet' type='text/css' href='static/style.css'/>
+    </head>
 
-        <div>
-            <form action="{{ url_for('add_transaction') }}" method='POST'>
-                <dl>
-                    <dt>Expense Name
-                        <dd><input type=text name='expense_name'>
-                    <dt>Expense Value
-                        <dd><input type=text name='expense_value'>
-                    <dd><input type=submit value='submit'>
-                </dl>
+    <body>
+        <div class='content'>
+            <div class='header'>
+                BDGT
+            </div>
+            <div>
+                <form action="{{ url_for('add_transaction') }}" method='POST'>
+                        <input type=text name='expense_name' placeholder='Expense Name'><br>
+                        <input type=text name='expense_value' placeholder='Expense Amount'><br>
+                        <div class='buttons'>
+                            <input type=submit value='income' class='button' id='income'>
+                            <input type=submit value='expense' class='button' id='expense'>
+                        </div>
+                </form>
+        </div>
     </body>
+
 </html>
