--- a/app/templates/show_all.html
+++ b/app/templates/show_all.html
@@ -1,3 +1,15 @@
-{% for t in transactions %}
-{{ t }}<br>
-{% endfor %}
+<html>
+
+<head>
+	<link rel='stylesheet' type='text/css' href='static/style.css'/>
+	<script type='text/javascript' src='static/jquery.js'></script>
+	<script type='text/javascript' src='static/view_all.js'></script>
+</head>
+
+<body>
+	<div class='content' style='display:none'>
+		{% for t in transactions %}
+		{{ t }}<br>
+		{% endfor %}
+	</div>
+</body>
