--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,43 +1,12 @@
-<html>
-    
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1" /> 
-        <link rel='stylesheet' type='text/css' href='static/style.css'/>
-        <script type='text/javascript' src='static/jquery.js'></script>
-        <script type='text/javascript' src='static/index.js'></script>
-    </head>
+{% extends 'base.html' %}
 
-    <body>
-        <div class='content'>
-            <div id='main_menu'>
-                <div class='header'>
-                    BDGT
-                </div>
-                <div class='main_menu_button' id='new_expense_main'>New Expense</div>
-                <div class='main_menu_button' id='view_all_main'>View All</div>
-                <div class='main_menu_button' id='weekly_report_main'>Weekly Report</div>
-            </div>
-            
-            <div id='new_expense'>
-                <div class='header'>
-                    BDGT
-                </div>
-                <form action="{{ url_for('add_transaction') }}" method='POST'>
-                        <input type=text name='expense_name' placeholder='Expense Name'><br>
-                        <input type=text name='expense_value' placeholder='Expense Amount'><br>
-                        <div class='buttons'>
-                            <input type=submit value='income' class='button' id='income'>
-                            <input type=submit value='expense' class='button' id='expense'>
-                        </div>
-                </form>
-            </div>
+{% block header %}
+	<script type='text/javascript' src='static/index.js'></script>
+	<link rel='stylesheet' type='text/css' href='static/index.css'/>
+{% endblock %}
 
-            <div id='weekly_report'>
-                <div class='header'>
-                    BDGT
-                </div>
-            </div>
-        </div>
-    </body>
-
-</html>
+{% block content %}
+	<div class='main_menu_button' id='new_expense_main'>New Expense</div>
+    <div class='main_menu_button' id='view_all_main'>View All</div>
+    <div class='main_menu_button' id='weekly_report_main'>Weekly Report</div>
+{% endblock %}
